styling: mobile version

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
       </div>
       <div class="tip-container">
-        <p>Select Tip %</p>
+        <label>Select Tip %</label>
         <div class="tip-buttons-container">
           <button class="tip-button">5%</button>
           <button class="tip-button">10%</button>
