styled input section mobile

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
       <div class="tip-container">
         <label>Select Tip %</label>
         <div class="tip-buttons-container">
-          <button class="tip-button">5%</button>
-          <button class="tip-button">10%</button>
-          <button class="tip-button">15%</button>
-          <button class="tip-button">25%</button>
-          <button class="tip-button">50%</button>
-          <input type="number" id="custom-tip" placeholder="Custom" min="0" />
+          <button class="tip tip-button">5%</button>
+          <button class="tip tip-button">10%</button>
+          <button class="tip tip-button">15%</button>
+          <button class="tip tip-button">25%</button>
+          <button class="tip tip-button">50%</button>
+          <input class="tip" type="number" id="custom-tip" placeholder="Custom" min="0" />
         </div>
       </div>
       <div class="people-container">
