added: colored border when surtain conditions are met.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <label for="bill">Bill</label>
         <div id="bill-container" class="input-icon-container">
           <img src="./assets/images/icon-dollar.svg" alt="dollar icon">
-          <input type="number" id="bill" placeholder="0" min="0">
+          <input type="number" id="bill" placeholder="0">
         </div>
       </div>
       <div class="tip-container">
@@ -34,12 +34,12 @@
       </div>
       <div class="people-container">
         <div class="label-error-container">
-        <label for="people">Number of People</label>
-        <p class="error-message" id="error-message">Can't be zero</p>
+          <label for="people">Number of People</label>
+          <p class="error-message" id="error-message">Can't be zero</p>
         </div>
-        <div ID="people-container" class="input-icon-container">
+        <div id="people-container" class="input-icon-container">
           <img src="./assets/images/icon-person.svg" alt="person icon">
-          <input type="number" id="people" placeholder="0" min="1">
+          <input type="number" id="people" placeholder="0">
         </div>
       </div>
     </section>
