--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
       <div class="tip-container">
         <label>Select Tip %</label>
         <div class="tip-buttons-container">
-          <button class="tip tip-button">5%</button>
-          <button class="tip tip-button active">10%</button>
-          <button class="tip tip-button">15%</button>
-          <button class="tip tip-button">25%</button>
-          <button class="tip tip-button">50%</button>
-          <input class="tip" type="number" id="custom-tip" placeholder="Custom" min="0"  />
+          <button class="tip tip-button" value="5">5%</button>
+          <button class="tip tip-button" value="10">10%</button>
+          <button class="tip tip-button" value="15">15%</button>
+          <button class="tip tip-button" value="25">25%</button>
+          <button class="tip tip-button" value="50">50%</button>
+          <input class="tip" type="number" id="custom-tip" placeholder="Custom" />
         </div>
       </div>
       <div class="people-container">
